[Service] Implemented SMTP notify and tests for API
