# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /
+basePath: /api/v1/auth/
 definitions:
   http.ErrorResponse:
     properties:
@@ -48,8 +48,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/types.GenerateResponse'
-        "400":
-          description: Ошибка в запросе
+        "404":
+          description: Пользователя с данным UUID нет в системе
           schema:
             $ref: '#/definitions/http.ErrorResponse'
         "500":
@@ -79,8 +79,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/types.RefreshResponse'
-        "400":
-          description: Ошибка в запросе
+        "401":
+          description: Недействительный/просроченный токен
           schema:
             $ref: '#/definitions/http.ErrorResponse'
         "500":
